--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
     margin: 25px auto;
     overflow: hidden;
     border-radius: 10px;
-    border: 4px solid #b1c9bb;
+    border: 4px solid #476e57;
     font-family: sans-serif;
     
   }
